--- a/Proiect_2/Proiect_2.cbp
+++ b/Proiect_2/Proiect_2.cbp
@@ -35,9 +35,13 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="include/FelPrincipal.h" />
+		<Unit filename="include/PreparateDePost.h" />
+		<Unit filename="include/PreparateNormale.h" />
 		<Unit filename="include/Produs.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/FelPrincipal.cpp" />
+		<Unit filename="src/PreparateDePost.cpp" />
+		<Unit filename="src/PreparateNormale.cpp" />
 		<Unit filename="src/Produs.cpp" />
 		<Extensions />
 	</Project>
